[gd_scene load_steps=3 format=3 uid="uid://c2xk8fpjj6x7t"]

[ext_resource type="Script" path="res://Scripts/item.gd" id="1_ass78"]
[ext_resource type="Texture2D" uid="uid://1m5x3d6ylk3c" path="res://icon.svg" id="2_hd0d6"]

[node name="item" type="PanelContainer"]
script = ExtResource("1_ass78")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="textRect" type="TextureRect" parent="VBoxContainer"]
layout_mode = 2
texture = ExtResource("2_hd0d6")

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Name"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
